# blueNOS

./: .gdbinit  .gitattributes  .gitignore  Cargo.toml  Makefile  README  README.md  asm_fmt.pl  common.mk
boot/: Makefile  config.txt  linker.ld  main.c
bootloader/: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
disk/: config.txt
include/drivers/: base.h  gpio.h  hrand.h  power.h  time.h  uart.h
include/drivers/mbox/: framebuf.h  info.h  mbox.h
include/drivers/peripherals/: gpio.h  uart.h
include/graphics/: colors.h  font.h  font_bitmap.h  util.h
include/main/: atags.h
include/mm/: page.h
include/util/: debug.h  list.h  stdio.h  stdlib.h  util.h
include/xmodem/: client.h  xmodem.h
kernel/: .gdbinit  Cargo.toml  Makefile  config.txt  kernel8.elf  linker.ld
kernel/drivers/: gpio.c  hrand.c  power.c  uart.c
kernel/drivers/mbox/: framebuf.c  info.c  mbox.c
kernel/ext/: boot.S  layout.ld
kernel/graphics/: font.c  util.c
kernel/main/: boot.S  kernel.c
kernel/mm/: page.c
kernel/src/: atags.rs  kmain.rs  lang.rs
kernel/src/drivers/: gpio.rs  hrand.rs  mod.rs  power.rs  time.rs  uart.rs
kernel/src/drivers/mbox/: mod.rs
kernel/util/: stdio.c  stdlib.c
kernel/xmodem/: client.c
make/: arm.mk  common.mk
pi/: Cargo.toml
server/: Makefile  server.c
src/: linker.ld
src/drivers/: gpio.c  hrand.c  power.c  time.c  uart.c
src/main/: atags.c  boot.S  kernel.c
src/util/: stdio.c  stdlib.c
srv/: Makefile  boot.c  boot.h  shell.c  shell.h  srv.c  util.c  util.h
xmodem/: Cargo.toml
xmodem/src/: lib.rs  read_ext.rs  tests.rs
(+2 files in other folders)
