[package]
name = "kernel"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]
name = "kernel"
path = "src/kmain.rs"


[profile.dev]
# abort disables stack unwinding on panic
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
spin = "0.4.9"

[dependencies.rand_core]
version = "0.3.0"
default-features = false

[dependencies.lazy_static]
version = "1.1.0"
features = ["spin_no_std"]